--- a/public/index1.html
+++ b/public/index1.html
@@ -1,9 +1,2 @@
-<<<<<<< HEAD
 <h1>Hello World!</h1>
-
-<p>Belajar git!</p>
-<p>Belajar git!</p>
-<p>Belajar git!</p>
-=======
-<h1>Hello World!</h1>
->>>>>>> parent of 66f0bcc (update)
+update fitur 1
